fix: improve selected card border visibility with enhanced opacity

--- a/src/Project/Project.css
+++ b/src/Project/Project.css
@@ -25,7 +25,7 @@
 }
 
 .card-selected {
-  box-shadow: rgba(255, 255, 255, 0.1) 0px 0px 15px 0px;
+  box-shadow: rgba(255, 255, 255, 0.15) 0px 0px 20px 0px;
 }
 
 .project-list-container {
